--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>для ритко 💖</title>
   <style>
     :root {
-      --bg-light: url('https://i.imgur.com/Unx5F2Z.jpg');
+      --bg-light: url('https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=800&q=80');
       --bg-dark: #1a1a1a;
       --text-light: #d63384;
       --text-dark: #ffccdd;
