--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       const seconds = Math.floor((diff / 1000) % 60);
 
       document.getElementById('timer').innerText =
-        `вместе уже: ${days} дней, ${hours} ч, ${minutes} мин, ${seconds} сек 💞`;
+        `мы вместе уже: ${days} дней, ${hours} ч, ${minutes} мин, ${seconds} сек 💞`;
     }
 
     setInterval(updateTimer, 1000);
