--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>для ритко 💖</title>
   <style>
     :root {
-      --bg-light: url('https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=800&q=80');
+      --bg-light: url('https://img.freepik.com/free-photo/pink-yellow-plain-background_53876-98329.jpg?t=st=1752881792~exp=1752885392~hmac=614c47398318b89066f19d64f2403982dbc6fd64632dcc7329b09601531d5dd7&w=826');
       --bg-dark: #1a1a1a;
       --text-light: #d63384;
       --text-dark: #ffccdd;
